@@ -52,6 +52,7 @@ enum
   MTYPE_KEY,
   MTYPE_KEYCHAIN,
   MTYPE_IF_RMAP,
+  MTYPE_IF_RMAP_NAME,
   MTYPE_SOCKUNION,
   MTYPE_PRIVS,
   MTYPE_ZLOG,
@@ -59,6 +60,9 @@ enum
   MTYPE_WORK_QUEUE,
   MTYPE_WORK_QUEUE_ITEM,
   MTYPE_WORK_QUEUE_NAME,
+  MTYPE_PQUEUE,
+  MTYPE_PQUEUE_DATA,
+  MTYPE_HOST,
   MTYPE_RTADV_PREFIX,
   MTYPE_VRF,
   MTYPE_VRF_NAME,
